--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,9 @@ dependencies {
     })
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    implementation "android.arch.lifecycle:runtime:1.0.0-beta1"
-    implementation "android.arch.lifecycle:extensions:1.0.0-beta1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-beta1"
+    implementation "android.arch.lifecycle:runtime:1.0.3"
+    implementation "android.arch.lifecycle:extensions:1.0.0-rc1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.3"
 
     /*dagger2*/
     implementation 'com.google.dagger:dagger:2.12'
