--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 
     implementation "android.arch.lifecycle:runtime:1.0.3"
     implementation "android.arch.lifecycle:extensions:1.0.0-rc1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.3"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-rc1"
 
     /*dagger2*/
     implementation 'com.google.dagger:dagger:2.12'
