--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,11 +81,14 @@ dependencies {
 
 
     implementation 'com.google.code.gson:gson:2.8.1'
-    implementation 'com.github.bumptech.glide:glide:4.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.3.0'
     //RecyclerViewBaseAdapter
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.33'
 
 
     implementation 'com.github.bumptech.glide:glide:4.3.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
+
+    //utils
+    compile 'com.blankj:utilcode:1.9.6'
 }
